--- a/server/config.yaml
+++ b/server/config.yaml
@@ -84,7 +84,7 @@ timer:
     compareField: created_at
     interval: 2160h
 zap:
-  level: info
+  level: debug
   format: console
   prefix: '[GIN-VUE-ADMIN]'
   director: log
